--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@ p, li {
 
 
 html {
-  background-color: #00539F;
+  background-color: black;
 }
 
 body {
   width: 600px;
   margin: 0 auto;
-  background-color: #FF9500;
+  background-color: dodgerblue;
   padding: 0 20px 20px 20px;
   border: 5px solid black;
 }
@@ -31,11 +31,16 @@ body {
 h1 {
   margin: 0;
   padding: 20px 0;
-  color: #00539F;
-  text-shadow: 3px 3px 1px black;
+  color: black;
+
 }
 
 img {
   display: block;
   margin: 0 auto;
 }
+h2 {
+  margin: 0;
+  padding: 20px 0;
+  color: black;
+  text-shadow: 1px 1px 1px black;
